<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_input_url" />

            <EditText
                android:id="@+id/url_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_input_url"
                android:text="@string/default_url" >
            </EditText>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_input_nthread" />

            <EditText
                android:id="@+id/nthread_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_nthread"
                android:text="@string/default_n_thread" >
            </EditText>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_input_total_times" />

            <EditText
                android:id="@+id/times_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_total_times"
                android:text="@string/default_times" >
            </EditText>

            <Button
                android:id="@+id/start_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="start" />

            <TextView
                android:id="@+id/textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/waiting" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>